<resources>
    <string name="app_name">bTablo</string>

    <string name="hint_team1">Команда 1</string>
    <string name="hint_team2">Команда 2</string>
    <string name="hint_points1">Счёт 1</string>
    <string name="hint_points2">Счёт 2</string>
    <string name="hint_period">Период</string>
    <string name="hint_minutes">Минуты</string>
    <string name="hint_seconds">Секунды</string>
    <string name="hint_fouls">Фолы</string>
    <string name="hint_attack">Время атаки</string>

    <string name="button_send_all">Восстановить табло</string>
    <string name="button_reset">Сброс</string>
    <string name="button_start">Старт</string>
    <string name="button_stop">Стоп</string>
    <string name="button_signal1">Сигнал 1</string>
    <string name="button_signal2">Сигнал 2</string>
    <string name="button_send_teams">Отправить названия команд</string>
    <string name="button_clear">Очистить</string>
    <string name="button_server">Сервер</string>
    <string name="button_client">Клиент</string>
    <string name="button_24sec">24 сек</string>
    <string name="button_14sec">14 сек</string>

    <string name="button_plus">+</string>
    <string name="button_minus">-</string>

    <string name="about_text_format">
        <![CDATA[
        Приложение <b><font color="#429900">Bluetooth Tablo</font></b><br/>
        Версия: <b>%1$s (%2$d)</b><br/>
        Собрано: <b>%3$s</b> года в <b>%4$s</b><br/>
        ]]>
    </string>

    <string name="sending_state_sending">подключение..</string>
    <string name="sending_state_success">Подключено</string>

    <string name="sending_state_error_no_geo_permission">Нет разрешения на геолокацию!</string>
    <string name="sending_state_error_bluetooth_denied">Bluetooth отключен!</string>
    <string name="sending_state_error_tablo_not_found">Табло не найдено!</string>
    <string name="sending_state_error_connection_exception">Ошибка подключения!</string>
    <string name="sending_state_error_wrong_checksum">Ошибка передачи данных!</string>
    <string name="sending_state_error">Ошибка!</string>

    <string name="text_hold">Владение</string>
    <string name="text_inning">Подача</string>
    <string name="text_points_by_games">Счёт по партиям</string>
    <string name="text_match">Партия</string>
    <string name="text_quarter">Четверть</string>
    <string name="text_half">Тайм</string>

    <string name="text_settings">Настройки</string>
    <string name="text_save">Сохранить</string>
    <string name="text_mac_address">MAC адрес</string>
    <string name="text_mac_address_incorrect">некорректный MAC адрес</string>
    <string name="text_recent_mac_addresses">Недавние</string>

    <string name="format_default_mac" formatted="true">MAC адрес по умолчанию\n%s</string>
    <string name="game_football" formatted="true">Футбол</string>
    <string name="game_volleyball" formatted="true">Волейбол</string>
    <string name="game_basketball" formatted="true">Баскетбол</string>
</resources>
