<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".tablo.TabloActivity">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/ActionBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/reset_Button"
                style="@style/ButtonStyle.Margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_reset" />

            <include layout="@layout/include_teams" />

            <include layout="@layout/include_time" />

            <include layout="@layout/include_points" />

            <include layout="@layout/include_hold" />

            <include layout="@layout/include_attack" />

            <Button
                android:id="@+id/sendAll_Button"
                style="@style/ButtonStyle.Margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_send_all" />

            <TextView
                android:id="@+id/hasUnsentChanges_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/has_unsent_changes"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="italic" />

            <LinearLayout
                android:id="@+id/sendingState_LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ProgressBar
                    android:id="@+id/sending_ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/sendingState_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="@string/sending_state_sending" />

            </LinearLayout>

            <TextView
                android:id="@+id/about_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/about_text_format"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>